# A-Chi

./: .gitignore  Dockerfile  README.md  __init__.py  client.py  codebase_explanation.md  getting_started.md  grader.py  implementation_plan.md  inference.py  manual_test_scenarios.md  models.py  openenv.yaml  pyproject.toml  smoke_test.py  swagger_guide.md  task.md  task_bank.py  test_output.txt  verify_deployment.py  walkthrough.md
scripts/: validate.py
server/: app.py
supportdesk_env/: __init__.py  client.py  grader.py  logging_config.py  models.py  task_bank.py
supportdesk_env/server/: __init__.py  app.py  environment.py
tests/: test_environment.py
