[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "supportdesk-openenv"
version = "0.1.0"
description = "A real-world OpenEnv-style support triage environment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "requests>=2.32.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
supportdesk-server = "supportdesk_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["supportdesk_env", "supportdesk_env.server"]
